--- a/style.css
+++ b/style.css
@@ -5,8 +5,10 @@
   font-family: Product sans;
 }
 body {
-  background: #212121;
   overflow-x: hidden;
+  width: 100%;
+  height: 100vh;
+  background-color: #212121;
 }
 header {
   position: fixed;
@@ -17,7 +19,7 @@ header {
   justify-content: space-between;
   align-items: center;
   transition: 0.6s;
-  padding: 40px 100px;
+  padding: 20px 100px;
   z-index: 100000;
 }
 header.logo {
@@ -33,6 +35,7 @@ header ul {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 10px;
 }
 header ul li {
   position: relative;
@@ -151,5 +154,105 @@ footer {
   header ul.slide {
     opacity: 1;
     transform: translateX(0);
+  }
+}
+.banner-card {
+  border-radius: 10px;
+}
+::before,
+::after {
+  box-sizing: border-box;
+}
+.blog-post {
+  width: 100%;
+  max-width: 98rem;
+  padding: 5rem;
+  background-color: #cecece;
+  box-shadow: 0 1.4 rem 8rem rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  border-radius: 0.8rem;
+}
+.blog-post__img {
+  min-width: 35rem;
+  max-width: 35rem;
+  height: 30rem;
+  transform: translateX(-8rem);
+  position: relative;
+}
+.blog-post__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  border-radius: 0.8rem;
+}
+.blog-post__img::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: linear-gradient(to right, rgba(79, 172, 254, 0.8), rgba(0, 242, 254, 0.8));
+  box-shadow: 0.5rem 0.5rem 3rem 1px rgba(0, 0, 0, 0.05);
+  border-radius: 0.8rem;
+}
+.blog-post__date span {
+  display: block;
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 1.6rem;
+  font-weight: 600;
+  margin: 0.5rem 0;
+}
+.blog-post__title {
+  font-size: 2.5rem;
+  margin: 1.5rem 0 2rem;
+  text-transform: uppercase;
+  color: #212121;
+}
+.blog-post__text {
+  margin-bottom: 3rem;
+  font-size: 1.4rem;
+  color: rgba(0, 0, 0, 0.7);
+}
+.blog-post__cta {
+  display: inline-block;
+  padding: 1.5rem 3rem;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  color: #fff;
+  background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
+  border-radius: 0.8rem;
+  text-decoration: none;
+}
+.blog-post__cta:hover {
+  background-image: linear-gradient(to right, #00f2fe 0%, #00f2fe 100%);
+  transition: 0.8s;
+}
+@media screen and (max-width: 1068px) {
+  .blog-post {
+    max-width: 80rem;
+  }
+  .blog-post__img {
+    min-width: 30rem;
+    max-width: 30rem;
+  }
+}
+@media screen and (max-width: 868px) {
+  .blog-post {
+    max-width: 70rem;
+  }
+}
+@media screen and (max-width: 768px) {
+  .blog-post {
+    padding: 2.5rem;
+    flex-direction: column;
+  }
+  .blog-post__img {
+    min-width: 100%;
+    max-width: 100%;
+    transform: translate(0, -8rem);
   }
 }
