--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ header {
   justify-content: space-between;
   align-items: center;
   transition: 0.6s;
-  padding: 20px 100px;
+  padding: 10px 100px;
   z-index: 100000;
 }
 header.logo {
@@ -82,11 +82,12 @@ footer {
   height: auto;
 }
 .banner-text {
-  position: absolute;
-  top: 50%;
-  right: 20%;
-  color: #fff;
-  padding: 20px;
+  display: flex;
+  color: #212121;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+  margin: 15em;
 }
 /* hamburger menu */
 .menu-toggle {
@@ -155,10 +156,11 @@ footer {
     opacity: 1;
     transform: translateX(0);
   }
+  header .logo {
+    width: 30px;
+  }
 }
-.banner-card {
-  border-radius: 10px;
-}
+/* card dua tea */
 ::before,
 ::after {
   box-sizing: border-box;
@@ -214,7 +216,7 @@ footer {
 .blog-post__text {
   margin-bottom: 3rem;
   font-size: 1.4rem;
-  color: rgba(0, 0, 0, 0.7);
+  color: #212121;
 }
 .blog-post__cta {
   display: inline-block;
@@ -244,6 +246,9 @@ footer {
   .blog-post {
     max-width: 70rem;
   }
+  .profile {
+    margin: 15em;
+  }
 }
 @media screen and (max-width: 768px) {
   .blog-post {
@@ -254,5 +259,27 @@ footer {
     min-width: 100%;
     max-width: 100%;
     transform: translate(0, -8rem);
+    margin-top: 3rem;
   }
+  .profile {
+    margin: 1em;
+  }
+}
+/* card dua tea */
+::-webkit-scrollbar {
+  width: 0.7em;
+}
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #3c3c3c;
+  border-radius: 2em;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #505050;
+  border-radius: 2em;
+}
+.profile {
+  margin: 20em;
 }
